# SvarogGameEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  COLORS.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Colors.cpp  Commands.txt  CoordinateStructs.h  EngineCamera.cpp  EngineCamera.h  EngineHeader.h  LICENSE  MainFile.cpp  Makefile  Point.cpp  PredefinedShapes.cpp  README.md  String.h  SvarogCore.h  SvarogGameEngine  SvarogWindow.cpp  SvarogWindow.h  TODO.txt  TerrianGen.cpp  TerrianGen.h  Vector.cpp  Vector.h  Version1  Window.h  a.out  build.sh  cmake_install.cmake  compile.sh  execute.sh  git_upload.sh  imgui.ini  (+9 more)
.github/workflows/: ccpp.yml
EngineFiles/: .MainFile.cpp.swp  MainFile.cpp
EngineFiles/Camera/: EngineCamera.h
EngineFiles/DumpArea/: Dump.txt
EngineFiles/FileParsers/: OBJParser.cpp  OBJParser.h
EngineFiles/Files/: EngineCamera.cpp  EngineFiles.7z  MainFile.cpp  PolygonHandler.cpp  PolygonHandler.h  PolygonMath.cpp
EngineFiles/Files/FileHandling/: PolygonHandler.h  STLParser.h
EngineFiles/Files/Files/: EngineCamera.h  GameEngineHeader.h  Keyboard.cpp  MainFile.cpp  PredefinedShapes.cpp  PredefinedShapes.h
EngineFiles/Files/MainEngineFunctions/: EngineCamera.cpp  EngineCamera.h  MainFile.cpp
EngineFiles/Files/VectorMathFiles/: PointClass.cpp  PointClass.h  Polygon.h  PolygonMath.h  Vector.cpp
EngineFiles/MainFolder/: MainFile.cpp
EngineFiles/Menu/: MenuHeader.h  ObjectOptions.h
EngineFiles/PolygonHandler/: PolygonMath.h  PredefinedShapes.h
EngineFiles/PredefinedOBJS/: PredefinedShapes.cpp  PredefinedShapes.h
EngineFiles/PredefinedObjects/: GameEngineHeader1.h  PredefinedShapes.cpp  PredefinedShapes.h
EngineFiles/RunnerFiles/: V1Var
EngineFiles/UbuntuProjectFiles/Files/: AssetHandler.cpp  EngineCamera.cpp  EngineCamera.h  GameEngineHeader.h  MainFile.cpp  RayCalc.cpp  (+1 more)
EngineFiles/testingforfiles/: test.cpp
Header/: COLORS.h  EngineHeader.h  Vector.h
Linux/: links.txt
Linux/Workspace/: PredefinedShapes.cpp  ShapeMenus.h  V1Var
Source/: Color.cpp  Vector.cpp  main.cpp
Windows/EngineFiles/: MainFile.cpp
Windows/Workspace/: EngineCamera.cpp  EngineCamera.h  GameEngineHeader.h  MainFile.cpp  PredefinedShapes.cpp  PredefinedShapes.h  ShapeClass.h  ShapeMenus.h
Workspace/: FontClass.h  GameEngineHeader.h  MainFile.cpp  Point.h  PredefinedShapes.cpp  PredefinedShapes.h  ShapeClass.h  ShapeMenus.h
Workspace/Vectors/: Vector.cpp
builds/: CMakeCache.txt  Makefile  SvarogEngine  SvarogGameEngine  cmake_install.cmake
builds/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/shaders/: shader_frag.frag  shader_frag.glsl  test.glsl
core/: ArrayList.cpp  ArrayList.h  Map.cpp  Map.hpp  Pair.cpp  Pair.h  Pair.hpp  Point.h  String.cpp  String.h  Vector.cpp  Vector.h  keyboard.cpp  keyboard.h  math.h  memory.h  mouse.cpp  mouse.h
core/Input/: InputManager.cpp  InputManager.h  WindowInput.cpp  WindowInput.h  WindowMouseInput.cpp  WindowMouseInput.h  keyboard.cpp  keyboard.h  keycodes.h  keymap.cpp  keymap.h  mouse.cpp  mouse.h  mousecodes.h
core/ds-classes/: Array.h  ArrayList.cpp  ArrayList.h  ClassString.cpp  ClassString.h  LinkedList.cpp  LinkedList.h  Node.h  Pair.cpp  Pair.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  function_list.h
core/events/: Event.cpp  Event.h  EventDispatch.cpp  EventDispatch.h  EventLayer.cpp  EventLayer.h  EventListener.cpp  EventListener.h  EventTypes.h  InputEvent.cpp  InputEvent.h  LinkedList.cpp  LinkedList.h  Log.h  Message.h  Queue.cpp  Queue.h
core/logger/: Log.h  LoggerGroup.cpp  LoggerGroup.h  Message.cpp  Message.h
core/memory/: gui_task_manager.cpp  gui_task_manager.h  render_task_manager.cpp  render_task_manager.h  shader_editor_cache.cpp  shader_editor_cache.h  svarog_task_manager.h  svarog_thread.cpp  svarog_thread.h  svarog_thread_task.h  thread.h
debugger/: logger.cpp  logger.h
debugger/debuglogs/: CameraMatrix.txt  lookAtMat.txt
glad/: CMakeCache.txt  Makefile  cmake_install.cmake  glad.c  test.txt
glad/src/: glad.c
libraries/SvarogGameEngine-Gui/: imgui.cpp  imgui.h  imgui_widgets.cpp
main/: Color.cpp  Color.h  EngineHeader.h  HSV.cpp  HSV.h  cmyk.cpp  cmyk.h  exception.h  hsl.cpp  hsl.h  htmlcolors.cpp  htmlcolors.h  keyboard.h  main.cpp
main/application/: app.cpp  app.h
main/camera/: camera.cpp  camera.h
main/color/: Color.cpp  Color.h  HSV.cpp  HSV.h  cmyk.h  hsl.h  htmlcolors.cpp  htmlcolors.h
main/enginewindow/: enginewindow.cpp  enginewindow.h
main/materials/: material.h  shadergen.h
main/shaders/: FragmentShader.glsl  VertexShader.glsl  VertexShader.vert  VertexShader3D.glsl  material.cpp  material.h  shadercheck.txt
main/shapes/: shape.cpp  shape.h
main/svarogengine/: engine_space.cpp  engine_space.h  svarogengine.cpp  svarogengine.h
main/window/: window.cpp  window.h
main/windowhandling/: windowinput.cpp  windowinput.h
math/: camera_matrix.cpp  camera_matrix.h  euler_angles.cpp  euler_angles.h  math.h  matrix.cpp  matrix.h  matrix2f.h  matrix3f.h  matrix4f.h  translatematrix.h  translatevec2.cpp  translatevec2.h  translatevec3.cpp  translatevec3.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
old-code/: Note.txt
physics/: matrix.h  vec3.cpp  vec3.h
physics3d/: vec2.cpp  vec2.h  vec3.h
render-pipeline/: gl_libs.h
render-pipeline/mesh/: MeshGen.h  cube.cpp  cube.h  svarog_polygon.cpp  svarog_polygon.h  svarog_renderobj.cpp  svarog_renderobj.h  svarog_shape.cpp  svarog_shape.h
render-pipeline/shader/: FragmentShader.cpp  FragmentShader.h  ShaderGen.h  ShaderProgram.cpp  ShaderProgram.h  SvarogShader.cpp  SvarogShader.h  VertexShader.cpp  VertexShader.h
render-pipeline/viewport/: view_space.cpp  view_space.h
render-pipeline/window-initalization/: glad_loader.cpp  glad_loader.h  window_context.cpp  window_context.h  window_monitor.cpp  window_monitor.h  window_update.cpp  window_update.h
spdlog/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  spdlog.pc  spdlogConfigVersion.cmake
spdlog/tests/: CTestTestfile.cmake  spdlog-utests
terrian/: noisemap.cpp  noisemap.h  perlin.h
(+78 files in other folders)
