cmake_minimum_required(VERSION 3.10)
project(SvarogGameEngine)

set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES glad.c main.cpp)
set(GCC_COVERAGE_COMPILE_FLAGS, "-DCMAKE_BUILD_TYPE=DEBUG")
set(GCC_COVERAGE_COMPILE_FLAGS, "-Wno-dev")
include_directories(.)
include_directories(glad)
include_directories(core)
include_directories(core/ds-classes)
include_directories(core/events)
include_directories(core/events/event-layer)
include_directories(core/events/event-types)
include_directories(core/logger)
include_directories(core/Input)
include_directories(debugger)
include_directories(glad)
include_directories(main)
include_directories(main/shapes)
include_directories(main/camera)
include_directories(main/color)
include_directories(main/enginewindow)
include_directories(main/materials)
include_directories(main/svarogengine)
include_directories(main/window)
include_directories(math)
include_directories(render-pipeline)
include_directories(render-pipeline/window-initalization)
include_directories(render-pipeline/shader)
include_directories(render-pipeline/mesh)
include_directories(render-pipeline/shader/glsl_shader_generation)
include_directories(render-pipeline/shader/s_lab)
include_directories(render-pipeline/mesh/opengl_mesh_buffers)
include_directories(libraries)
include_directories(libraries/imgui)
include_directories(libraries/imgui/examples)
include_directories(libraries/imgui/examples/libs)
include_directories(libraries/imgui/examples/libs/include/glfw/GLFW)

add_executable(SvarogGameEngine
        glad/glad.c
        libraries/imgui/examples/libs/glfw/include/GLFW/glfw3.h
        libraries/imgui/examples/libs/glfw/include/GLFW/glfw3native.h
        libraries/imgui/imconfig.h
        libraries/imgui/imgui_demo.cpp
        libraries/imgui/imgui_draw.cpp
        libraries/imgui/examples/imgui_impl_glfw.cpp
        libraries/imgui/examples/imgui_impl_glfw.h
        libraries/imgui/examples/imgui_impl_opengl3.h
        libraries/imgui/examples/imgui_impl_opengl3.cpp
        libraries/imgui/imgui_internal.h
        libraries/imgui/imgui_widgets.cpp
        libraries/imgui/imgui.h
        libraries/imgui/imgui.cpp
        libraries/imgui/imstb_rectpack.h
        libraries/imgui/imstb_textedit.h
        libraries/imgui/imstb_truetype.h
        render-pipeline/window-initalization/glad_loader.h
        render-pipeline/window-initalization/glad_loader.cpp
        render-pipeline/window-initalization/window_context.h
        render-pipeline/window-initalization/window_context.cpp
        render-pipeline/window-initalization/window_update.h
        render-pipeline/window-initalization/window_update.cpp
        render-pipeline/window-initalization/window_monitor.h
        render-pipeline/window-initalization/window_monitor.cpp
        render-pipeline/shader/SvarogShader.h
        render-pipeline/shader/VertexShader.h 
        render-pipeline/shader/VertexShader.cpp 
        render-pipeline/shader/FragmentShader.h
        render-pipeline/shader/FragmentShader.cpp
        render-pipeline/shader/ShaderProgram.h
        render-pipeline/shader/ShaderProgram.cpp
        render-pipeline/mesh/svarog_shape.h
        render-pipeline/mesh/svarog_shape.cpp
        render-pipeline/mesh/svarog_renderobj.h
        render-pipeline/mesh/svarog_renderobj.cpp
        render-pipeline/shader/glsl_shader_generation/shader_defs.h
        render-pipeline/shader/glsl_shader_generation/shader_gen.h
        render-pipeline/shader/glsl_shader_generation/shader_gen.cpp
        render-pipeline/shader/s_lab/svarog_material.h 
        render-pipeline/shader/s_lab/svarog_material.cpp
        render-pipeline/mesh/opengl_mesh_buffers/mesh_buffer.h
        render-pipeline/mesh/opengl_mesh_buffers/mesh_vao.h
        render-pipeline/mesh/opengl_mesh_buffers/mesh_vao.cpp
        render-pipeline/mesh/opengl_mesh_buffers/mesh_vbo.h
        render-pipeline/mesh/opengl_mesh_buffers/mesh_vbo.cpp
        render-pipeline/mesh/opengl_mesh_buffers/mesh_ebo.h
        render-pipeline/mesh/opengl_mesh_buffers/mesh_ebo.cpp
        core/ds-classes/Array.h
        core/ds-classes/ArrayList.h
        core/ds-classes/Node.h
        core/ds-classes/Queue.h
        core/ds-classes/Stack.h
        core/ds-classes/Stack.cpp
        core/events/event-types/keyevent.cpp
        core/events/event-types/keyevent.h
        core/events/event-types/mouseevent.h
        core/events/event-types/mousevent.cpp
        core/events/Event.cpp
        core/events/Event.h
        core/events/event-dispatchers/EventDispatch.h
        core/events/event-dispatchers/KeyEventDispatcher.h
        core/events/event-dispatchers/KeyEventDispatcher.cpp
        core/events/event-listeners/EventListener.cpp
        core/events/event-listeners/EventListener.h
        core/events/event-listeners/KeyListener.cpp
        core/events/event-listeners/KeyListener.h
        core/events/event-queues/event_queue.h
        core/events/event-layer/EventLayer.h
        core/events/event-layer/EventLayer.cpp
        core/events/event-layer/LayerStack.h
        core/events/event-layer/LayerStack.cpp
        core/events/EventTypes.h
        core/logger/Log.h
        core/logger/Log.cpp
        core/logger/Message.h
        core/logger/Message.cpp
        core/logger/LoggerGroup.h
        core/logger/LoggerGroup.cpp
        core/Input/keyboard.h
        core/Input/keycodes.h
        core/Input/keymap.h
        core/Input/mouse.h
        core/Input/mousecodes.h
        core/Input/WindowInput.h 
        core/Input/WindowInput.cpp
        core/Input/InputManager.h
        core/Input/InputManager.cpp
        core/Input/keymap.h
        core/Input/keymap.cpp
        core/Point.h
        core/String.cpp
        core/String.h
        debugger/logger.cpp
        debugger/logger.h
        glad/glad.c
        main/camera/camera.cpp
        main/camera/camera.h
        main/color/cmyk.cpp
        main/color/cmyk.h
        main/color/Color.cpp
        main/color/Color.h
        main/color/hsl.cpp
        main/color/hsl.h
        main/color/HSV.cpp
        main/color/HSV.h
        main/color/htmlcolors.cpp
        main/color/htmlcolors.h
        main/enginewindow/enginewindow.cpp
        main/enginewindow/enginewindow.h
        main/enginewindow/engine-gui/imgui_init.h
        main/enginewindow/engine-gui/imgui_init.cpp
        main/enginewindow/engine-gui/sidebar-components/button.h
        main/enginewindow/engine-gui/sidebar-components/button.cpp
        main/enginewindow/engine-gui/sidebar-components/gui_frames.h
        main/enginewindow/engine-gui/sidebar-components/gui_frames.cpp
        main/enginewindow/engine-gui/gui_layer.h
        main/enginewindow/engine-gui/gui_layer.cpp
        main/materials/material.h
        main/materials/shadergen.cpp
        main/materials/shadergen.h
        main/shapes/shape.cpp
        main/shapes/shape.h
        main/svarogengine/svarogengine.cpp
        main/svarogengine/svarogengine.h
        main/window/window.cpp
        main/window/window.h
        math/camera_matrix.cpp
        math/camera_matrix.h
        math/matrix.cpp
        math/matrix.h
        math/matrix2f.h
        math/matrix3f.h
        math/matrix4f.h
        math/vec2.cpp
        math/vec2.h
        math/vec3.h
        math/vec3.cpp
        math/vec4.h
        math/euler_angles.h
        math/euler_angles.cpp
        macrodefs.h
        main.cpp)
find_package(glfw3 REQUIRED)
find_package(X11 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(spdlog REQUIRED)
target_compile_definitions(SvarogGameEngine PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLAD)
target_link_libraries(${PROJECT_NAME} 
        GL 
        GLU 
        glfw 
        X11 
        Xxf86vm 
        Xrandr 
        pthread 
        Xi 
        dl
        Xinerama 
        Xcursor 
        assimp
        spdlog::spdlog)